fix home x-axis overflow

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,6 +1,6 @@
 .home-main {
     height: 60vh;
-    width: 100vw;
+    width: 100%;
     /* border: 1px solid red; */
     display: flex;
     align-items: center;
@@ -25,7 +25,7 @@
 }
 
 .top-rated {
-    width: 100vw;
+    width: 100%;
     height: 40vh;
     background-color: blue;
     text-align: center;
